--- a/src/css/RowSlider.module.css
+++ b/src/css/RowSlider.module.css
@@ -57,7 +57,7 @@
   transition: transform 0.75s;
 }
 
-.hovered {
+.arrowHovered {
   transform: translateX(1.2vw);
   max-width: unset;
   opacity: 1;
@@ -84,11 +84,15 @@
   position: absolute;
   left: 0;
   top: 0;
+  z-index: 1;
   width: 100%;
   white-space: nowrap;
   overflow: visible;
   transition: transform 0.7s ease-in-out;
-  /* transform: translateX(-600%); */
+}
+
+.previewHovered {
+  z-index: 2;
 }
 
 .item {
@@ -96,7 +100,6 @@
   width: calc(100% / 6);
   aspect-ratio: 16 / 9;
   padding: 0 0.2vw;
-  z-index: 11;
 }
 
 .item:first-child {
